--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <nav class="direct">
           <a class="background-menu" href="#home">Home</a>
           <a class="background-menu" href="#services">Nossos Serviços</a>
-          <a class="background-menu" href="./Development.html">Desenvolvimento de Sistemas</a>
-          <a class="background-menu" href="./DesignerUX.html">UX Designer</a>
+ /*        <a class="background-menu" href="./Development.html">Desenvolvimento de Sistemas</a> */
+          <a class="background-menu" href="./DesignerUX.html">UX Designer</a>  
           <a class="background-menu" href="#contact">Contato</a>
         </nav>
       </aside>
